--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Fabrice Marlboro <fabrice.xyclone@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build:backend": "rimraf ./dist && tsc",
+    "build:backend": "rimraf ./dist && tsc && tsc-alias",
     "dev:backend": "nodemon",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
@@ -29,6 +29,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^0.0.1-alpha.0",
     "yaml": "^2.3.3"
