--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
   "scripts": {
     "build:backend": "rimraf ./dist && tsc && tsc-alias",
     "dev:backend": "nodemon",
+    "start": "NODE_ENV=production node dist/index",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "redis": "^4.6.10",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.9",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
     "eslint": "^8.52.0",
