--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-form-data": "^2.0.22",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "redis": "^4.6.10",
     "socket.io": "^4.7.2"
@@ -29,7 +31,9 @@
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/express-form-data": "^2.0.4",
     "@types/express-session": "^1.17.9",
+    "@types/hpp": "^0.2.4",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
     "eslint": "^8.52.0",
