feat: express asset plugin `static support`

--- a/.config/applications.yml
+++ b/.config/applications.yml
@@ -2,6 +2,7 @@
 applications:
   - framework: 'express'
     session: '[sessions]:default'
+    assets: '[assets]:default'
     routes:
       - prefix: '/'
       - path: ''
