--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,11 @@ NODE_ENV=development
 
 APPNAME=Chenx
 SESSION_SECRET=8HBPQEB9UPG9PAS7DGF9G987G297G9
+
+# CDN Assets Space Configs
+STORAGE_CLIENT_KEY=6S7Z2PMY6PDB5L6BFHYI
+STORAGE_CLIENT_SECRET=5ynr9I/kWbEnW1fWfgIjRi1b9YeEVpM7J8Rpiga76oY
+STORAGE_REGION=fra1
+STORAGE_BUCKET=multipple20
+STORAGE_HOSTNAME=fra1.digitaloceanspaces.com
+STORAGE_BASE_URL=https://multipple20.fra1.digitaloceanspaces.com
