--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ckenx-node",
+  "name": "kenx-node",
   "version": "0.0.1",
-  "description": "Ckenx framework for NodeJS",
+  "description": "Kenx framework for NodeJS",
   "main": "dist/index.js",
-  "repository": "https://github.com/ckenx/ckenx-node",
+  "repository": "https://github.com/ckenx/kenx-node",
   "author": "Fabrice Marlboro <fabrice.xyclone@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -25,6 +25,7 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "mysql2": "^3.6.3",
     "redis": "^4.6.10",
     "socket.io": "^4.7.2"
   },
