--- a/.config/index.yml
+++ b/.config/index.yml
@@ -3,7 +3,7 @@ typescript: true
 
 # Project directory
 directory:
-  root: './demos/mvc'
+  root: './demos/simple'
   # Directory structure patterns (Optional)
   #
   # Default pattern: Developer have full control over the directory
@@ -11,7 +11,7 @@ directory:
   #
   # Defined patterns: The application auto-load this directories 
   # - `mvc`: Model View Controller
-  pattern: 'mvc'
+  pattern: '-'
 
 # Additional configurations
 __extends__: [
