--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.1.0",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/multipart": "^8.0.0",
+    "@fastify/session": "^10.5.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
@@ -22,6 +26,7 @@
     "express": "^4.18.2",
     "express-form-data": "^2.0.22",
     "express-session": "^1.17.3",
+    "fastify": "^4.24.3",
     "fs-extra": "^11.1.1",
     "globe-sdk": "^1.1.5",
     "helmet": "^7.0.0",
