--- a/.env.dev
+++ b/.env.dev
@@ -3,6 +3,15 @@ NODE_ENV=development
 APPNAME=Chenx
 SESSION_SECRET=8HBPQEB9UPG9PAS7DGF9G98012G8G12B6FS4SDQ46XVC9128F67G297G9
 
+# API version & development stage 
+# - Alpha (Eg. a.1) 
+# - Beta (b.1) 
+# - Release Candidate (rc.4)
+# - no-prefix (Post-release fixes)
+API_VERSION=1.0.0-a.1
+# Status of the service (development, operational, maintenance)
+API_STATUS=operational
+
 # CDN Assets Space Configs
 STORAGE_CLIENT_KEY=6S7Z2PMY6PDB5L6BFHYI
 STORAGE_CLIENT_SECRET=5ynr9I/kWbEnW1fWfgIjRi1b9YeEVpM7J8Rpiga76oY
