--- a/.config/servers.yml
+++ b/.config/servers.yml
@@ -2,6 +2,7 @@
 servers:
   # HTTP server configurations
   - type: 'http'
+    plugin: '@http'
     key: 'default' # Optional value
     HOST: 0.0.0.0
     PORT: 8008
@@ -9,6 +10,7 @@ servers:
   
   # Socket.io server configurations
   - type: 'socketio'
+    plugin: '@socketio'
     bindTo: 'http:default'
     adapter: '[databases]:redis-db'
     options:
