--- a/demo/sample/.env.dev
+++ b/demo/sample/.env.dev
@@ -1,2 +1,7 @@
+# Sample environment variables
+#
+# Runtime environment variable mode (optional)
 NODE_ENV=development
+
+# Application name (optional)
 APPNAME=sample-app
