--- a/demo/sample/Dockerfile
+++ b/demo/sample/Dockerfile
@@ -9,7 +9,7 @@ COPY yarn.lock ./
 RUN yarn install --frozen-lockfile
 
 COPY . .
-RUN yarn build
+RUN yarn dist
 
 FROM node:16-alpine
 WORKDIR /app
