--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Kenx Command Line Interface",
   "main": "dist/index.js",
   "directories": {
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/cli"
   },
   "publishConfig": {
