--- a/packages/plugins/kenx-express-assets/package.json
+++ b/packages/plugins/kenx-express-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-express-assets",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx express framework assets management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.6",
     "express-form-data": "^2.0.22",
     "globe-sdk": "^1.1.5"
   },
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-express-assets"
   },
   "publishConfig": {
