--- a/packages/plugins/kenx-fastify-assets/package.json
+++ b/packages/plugins/kenx-fastify-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify-assets",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx fastify framework assets management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,13 +11,13 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.6",
     "@fastify/multipart": "^8.0.0",
     "globe-sdk": "^1.1.5"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-fastify-assets"
   },
   "publishConfig": {
