--- a/packages/plugins/kenx-fastify-session/package.json
+++ b/packages/plugins/kenx-fastify-session/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify-session",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx fastify framework session management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.6",
     "@fastify/cookie": "^9.1.0",
     "@fastify/session": "^10.5.0",
     "fastify": "^4.24.3",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-fastify-session"
   },
   "publishConfig": {
