--- a/packages/plugins/kenx-fastify/package.json
+++ b/packages/plugins/kenx-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx fastify framework plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,13 +11,14 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.6",
     "@fastify/formbody": "^7.4.0",
+    "@fastify/helmet": "^11.1.1",
     "fastify": "^4.24.3"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-fastify"
   },
   "publishConfig": {
