--- a/packages/plugins/kenx-http/package.json
+++ b/packages/plugins/kenx-http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-http",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx socket.io server plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-http"
   },
   "publishConfig": {
@@ -33,6 +33,6 @@
   },
   "homepage": "https://github.com/ckenx/kenx-js#README",
   "dependencies": {
-    "@ckenx/node": "^0.0.4"
+    "@ckenx/node": "^0.0.6"
   }
 }
