--- a/packages/plugins/kenx-mongodb-events/package.json
+++ b/packages/plugins/kenx-mongodb-events/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-mongodb-events",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Kenx mongodb query events plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-mongodb-events"
   },
   "publishConfig": {
