--- a/packages/plugins/kenx-mongodb/package.json
+++ b/packages/plugins/kenx-mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-mongodb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Kenx mongodb client plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,12 +11,12 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.5",
     "mongodb": "^6.3.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-mongodb"
   },
   "publishConfig": {
