--- a/packages/plugins/kenx-mysql/package.json
+++ b/packages/plugins/kenx-mysql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-mysql",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Kenx mysql client plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,12 +11,12 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.4",
+    "@ckenx/node": "^0.0.6",
     "mysql2": "^3.6.3"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckenx/kenx-js.git",
+    "url": "https://github.com:ckenx/kenx-js.git",
     "directory": "packages/kenx-mysql"
   },
   "publishConfig": {
