--- a/examples/simple/.config/index.yml
+++ b/examples/simple/.config/index.yml
@@ -3,7 +3,7 @@ typescript: true
 
 # Project directory
 directory:
-  root: './src'
+  base: './src'
   # Directory structure patterns (Optional)
   #
   # Default pattern: Developer have full control over the directory
