--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "yarn test:e2e",
     "test:types": "tsd",
-    "test:packages": "lerna run test --stream --scope razzle-* --ignore razzle-examples-* -- --passWithNoTests --verbose --no-cache",
+    "test:packages": "lerna run test --stream --scope kenx-* --ignore examples-* -- --passWithNoTests --verbose --no-cache",
     "test:e2e": "jest --config ./test/jest.e2e.config.json --verbose --no-cache",
     "git-reset": "git reset --hard HEAD",
     "git-clean": "git clean -d -x -e node_modules -e packages -f",
     "clean": "lerna clean --yes",
     "format": "prettier --write 'packages/*/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx)' 'packages/*/!(node_modules)/**/*.js'",
-    "publish-packages": "node ./scripts/publish-packages.js"
+    "publish-packages": "node ./scripts/publish-packages.js",
+    "test:examples": "jest --config ./test/jest.examples.config.js --verbose --no-cache",
+    "test:examples:simple": "jest --config ./test/jest.examples.config.js --verbose --no-cache -t simple",
+    "test:examples:complex": "cross-env COMPLEX=true jest --config ./test/jest.examples.config.js --verbose --no-cache -t complex"
   },
   "dependencies": {
     "execa": "5.0.0",
@@ -26,6 +29,12 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "jest": "^29.7.0",
+    "lerna": "^8.0.0",
+    "prettier": "^3.1.0",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "yargs": "^17.7.2"
   },
   "jest": {
