--- a/packages/cli/templates/create-node-app/package.json
+++ b/packages/cli/templates/create-node-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "ckenx build",
     "dev": "ckenx run --dev",
-    "start": "ckenx run --prod"
+    "start": "ckenx run --prod",
+    "start:alt": "NODE_ENV=production node autorun"
   },
   "devDependencies": {},
   "dependencies": {
