--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/node",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Kenx framework for NodeJS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,8 +35,7 @@
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.2",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "typescript": "^5.3.2"
   },
   "publishConfig": {
     "access": "public"
