refactor: type dependency within workspace

--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   "author": "Fabrice Marlboro <fabrice.xyclone@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
     "test": "yarn test:e2e",
     "test:types": "tsd",
+    "build": "lerna run compile",
+    "watch": "lerna watch -- lerna run compile --scope=\\$LERNA_PACKAGE_NAME --include-dependents",
     "test:packages": "lerna run test --stream --scope kenx-* --ignore examples-* -- --passWithNoTests --verbose --no-cache",
     "test:e2e": "jest --config ./test/jest.e2e.config.json --verbose --no-cache",
     "git-reset": "git reset --hard HEAD",
     "git-clean": "git clean -d -x -e node_modules -e packages -f",
     "clean": "lerna clean --yes",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write 'packages/*/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx)' 'packages/*/!(node_modules)/**/*.js'",
+    "patch:all": "lerna version --no-private",
+    "publish:all": "lerna publish --no-private",
     "publish-packages": "node ./scripts/publish-packages.js",
     "test:examples": "jest --config ./test/jest.examples.config.js --verbose --no-cache",
     "test:examples:simple": "jest --config ./test/jest.examples.config.js --verbose --no-cache -t simple",
@@ -34,6 +38,7 @@
     "jest": "^29.7.0",
     "lerna": "^8.0.0",
     "prettier": "^3.1.0",
+    "tsd": "^0.29.0",
     "typescript-eslint": "^0.0.1-alpha.0",
     "yargs": "^17.7.2"
   },
