--- a/packages/node/.eslintrc
+++ b/packages/node/.eslintrc
@@ -16,6 +16,7 @@
 		"no-redeclare": 1,
 		"no-empty": 1,
 		"no-func-assign": 1,
+		"no-explicit-any": 0,
 		"no-inner-declarations": 1,
 		"no-invalid-regexp": 1,
 		"no-unexpected-multiline": 1,
