--- a/packages/plugins/kenx-express-assets/package.json
+++ b/packages/plugins/kenx-express-assets/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.6",
+    "@ckenx/node": "*",
     "express-form-data": "^2.0.22",
     "globe-sdk": "^1.1.5"
   },
