--- a/packages/plugins/kenx-express/package.json
+++ b/packages/plugins/kenx-express/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.6",
+    "@ckenx/node": "*",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
@@ -23,6 +23,9 @@
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.5",
     "@types/morgan": "^1.9.9"
+  },
+  "peerDependencies": {
+    "@ckenx/node": "~0||~1"
   },
   "repository": {
     "type": "git",
