--- a/packages/plugins/kenx-fastify/package.json
+++ b/packages/plugins/kenx-fastify/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.6",
+    "@ckenx/node": "*",
     "@fastify/formbody": "^7.4.0",
     "@fastify/helmet": "^11.1.1",
     "fastify": "^4.24.3"
