--- a/packages/plugins/kenx-mongodb/package.json
+++ b/packages/plugins/kenx-mongodb/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.5",
+    "@ckenx/node": "*",
     "mongodb": "^6.3.0"
   },
   "repository": {
