--- a/packages/plugins/kenx-mysql/package.json
+++ b/packages/plugins/kenx-mysql/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.6",
+    "@ckenx/node": "*",
     "mysql2": "^3.6.3"
   },
   "repository": {
