--- a/packages/plugins/kenx-express-session/package.json
+++ b/packages/plugins/kenx-express-session/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-express-session",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "Kenx express framework session management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "*",
+    "@ckenx/node": "^0.0.1",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
