--- a/packages/plugins/kenx-express/package.json
+++ b/packages/plugins/kenx-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-express",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "Kenx express framework plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "*",
+    "@ckenx/node": "^0.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
