--- a/packages/plugins/kenx-mongodb/package.json
+++ b/packages/plugins/kenx-mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-mongodb",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "Kenx mongodb client plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "*",
+    "@ckenx/node": "^0.0.1",
     "mongodb": "^6.3.0"
   },
   "repository": {
