--- a/packages/plugins/kenx-socketio/package.json
+++ b/packages/plugins/kenx-socketio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-socketio",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "description": "Kenx socket.io server plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "*",
+    "@ckenx/node": "^0.0.1",
     "@socket.io/redis-adapter": "^8.2.1",
     "socket.io": "^4.7.2"
   },
