--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write 'packages/*/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx)' 'packages/*/!(node_modules)/**/*.js'",
     "patch:all": "lerna version --no-private",
-    "publish:all": "lerna publish --no-private",
-    "publish-packages": "node ./scripts/publish-packages.js",
+    "publish:all": "node ./scripts/publish-packages.js",
     "test:examples": "jest --config ./test/jest.examples.config.js --verbose --no-cache",
     "test:examples:simple": "jest --config ./test/jest.examples.config.js --verbose --no-cache -t simple",
     "test:examples:complex": "cross-env COMPLEX=true jest --config ./test/jest.examples.config.js --verbose --no-cache -t complex"
