--- a/packages/plugins/kenx-express/package.json
+++ b/packages/plugins/kenx-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-express",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Kenx express framework plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
@@ -19,13 +18,11 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@ckenx/node": "*",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.5",
     "@types/morgan": "^1.9.9"
-  },
-  "peerDependencies": {
-    "@ckenx/node": "~0||~1"
   },
   "repository": {
     "type": "git",
