--- a/packages/plugins/kenx-fastify-assets/package.json
+++ b/packages/plugins/kenx-fastify-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify-assets",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Kenx fastify framework assets management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,9 +11,11 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.1",
     "@fastify/multipart": "^8.0.0",
     "globe-sdk": "^1.1.5"
+  },
+  "devDependencies": {
+    "@ckenx/node": "*"
   },
   "repository": {
     "type": "git",
