--- a/packages/plugins/kenx-fastify-session/package.json
+++ b/packages/plugins/kenx-fastify-session/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify-session",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Kenx fastify framework session management plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,11 +11,13 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.1",
     "@fastify/cookie": "^9.2.0",
     "@fastify/session": "^10.5.0",
     "fastify": "^4.24.3",
     "redis": "^4.6.10"
+  },
+  "devDependencies": {
+    "@ckenx/node": "*"
   },
   "repository": {
     "type": "git",
