--- a/packages/plugins/kenx-fastify/package.json
+++ b/packages/plugins/kenx-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-fastify",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Kenx fastify framework plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,10 +11,12 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.1",
     "@fastify/formbody": "^7.4.0",
     "@fastify/helmet": "^11.1.1",
     "fastify": "^4.24.3"
+  },
+  "devDependencies": {
+    "@ckenx/node": "*"
   },
   "repository": {
     "type": "git",
