--- a/packages/plugins/kenx-mysql/package.json
+++ b/packages/plugins/kenx-mysql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ckenx/kenx-mysql",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Kenx mysql client plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -11,8 +11,10 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@ckenx/node": "^0.0.1",
     "mysql2": "^3.6.3"
+  },
+  "devDependencies": {
+    "@ckenx/node": "*"
   },
   "repository": {
     "type": "git",
