--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ckenx/cli",
-  "version": "0.0.5",
+  "name": "ckenx",
+  "version": "0.0.9",
   "description": "Kenx Command Line Interface",
   "main": "dist/index.js",
   "directories": {
@@ -10,7 +10,7 @@
     "templates": "templates/"
   },
   "bin": {
-    "ckenx": "bin/ckenx"
+    "ckenx": "./bin/ckenx"
   },
   "scripts": {
     "compile": "rimraf ./dist && tsc",
@@ -43,15 +43,16 @@
     "colors": "^1.4.0",
     "enquirer": "^2.4.1",
     "esm": "^3.2.25",
+    "fs-extra": "^11.2.0",
     "listr": "^0.14.3",
     "pkg-install": "^1.0.0",
     "shelljs": "^0.8.5",
     "simple-git": "^3.20.0",
-    "tsc-prog": "^2.3.0"
+    "tsc-prog": "^2.3.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/shelljs": "^0.8.15",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.2"
+    "rimraf": "^5.0.5"
   }
 }
