--- a/packages/cli/templates/create-node-app/.config/servers.yml
+++ b/packages/cli/templates/create-node-app/.config/servers.yml
@@ -1,16 +1,16 @@
 # Application servers configuration
 servers:
-  # HTTP server configurations
+  # # HTTP server configurations
   # - type: 'http'
-  #   plugin: '@http'
+  #   plugin: '@ckenx/kenx-http'
   #   key: 'default' # Optional value
   #   HOST: 0.0.0.0
   #   PORT: 8008
-  #   application: '[frameworks]:fastify-app'
+  #   application: '[frameworks]:express-app'
   
-  # Socket.io server configurations
+  # # Socket.io server configurations
   # - type: 'socketio'
-  #   plugin: '@socketio'
+  #   plugin: '@ckenx/kenx-socketio'
   #   bindTo: 'http:default'
   #   adapter: '[databases]:redis-db'
   #   options:
