--- a/examples/simple-ts/tsconfig.json
+++ b/examples/simple-ts/tsconfig.json
@@ -10,6 +10,13 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "paths": {
+      "#routes/*": ["routes/*"]
+    }
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
