--- a/packages/plugins/kenx-vite/tsconfig.json
+++ b/packages/plugins/kenx-vite/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "types": ["vite/client"]
   }
 }
