--- a/examples/react-ssr-ts/tsconfig.json
+++ b/examples/react-ssr-ts/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "strict": true,
     "allowJs": true,
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
