--- a/packages/plugins/kenx-vite/tsconfig.json
+++ b/packages/plugins/kenx-vite/tsconfig.json
@@ -12,6 +12,6 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "declaration": true,
-    "types": ["vite/client"]
+    "types": ["vite/client", "vitest", "vitest/globals", "@testing-library/jest-dom"]
   }
 }
